[tool.poetry]
name = "promql-builder"
version = "0.1.0"
description = "A builder pattern implementation for constructing PromQL queries"
authors = ["pkpk1"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pkpk1/promql_builder"
keywords = ["prometheus", "promql", "query", "builder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 