[tool.poetry]
name = "promql-builder"
version = "1.0.0"
description = "A robust builder pattern implementation for constructing and parsing PromQL queries"
authors = ["pkpk1"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/pkpk1/promql_builder"
keywords = ["prometheus", "promql", "query", "builder", "parser", "lexer"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 